Corrected image formats

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <footer id="contact">
                 <div class="full-width">
                     <div class="half-width">
-                        <img id="contact-img" src="img/contact.png" alt="Contact Info" />
+                        <img id="contact-img" src="img/contact.jpg" alt="Contact Info" />
                     </div>
                     <div class="half-width">
                         <h2>Like what you see?</h2>
@@ -83,3 +83,4 @@
         </main>
     </body>
 </html>
+<!-- header image pixelated - need new -->
